--- a/index.html
+++ b/index.html
@@ -1,121 +1,68 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="theme-dark">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Telegram Style</title>
-    <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            background-color: #ffffff;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: #000000;
-        }
-
-        .telegram-container {
-            width: 400px;
-            border: 1px solid #D3D3D3;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-        }
-
-        .header {
-            background-color: #0088cc;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            font-weight: bold;
-            font-size: 18px;
-        }
-
-        .message {
-            padding: 10px;
-            border-bottom: 1px solid #f0f0f0;
-        }
-
-        .message:last-child {
-            border-bottom: none;
-        }
-
-        .message .sender {
-            font-weight: bold;
-            color: #0088cc;
-            margin-bottom: 5px;
-        }
-
-        .message .text {
-            font-size: 14px;
-            line-height: 1.4;
-        }
-
-        .message.user {
-            background-color: #e3f2fd;
-        }
-
-        .message.bot {
-            background-color: #f9f9f9;
-        }
-
-        .input-box {
-            padding: 10px;
-            border-top: 1px solid #D3D3D3;
-            background-color: #f9f9f9;
-            display: flex;
-        }
-
-        .input-box input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #D3D3D3;
-            border-radius: 4px;
-            font-size: 14px;
-            outline: none;
-        }
-
-        .input-box button {
-            margin-left: 10px;
-            padding: 10px;
-            background-color: #0088cc;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-
-        .input-box button:hover {
-            background-color: #0077bb;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Как написать первое сообщение</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="im_page_wrap">
+    <header class="tg_head_split">
+      <div class="tg_head_logo_wrap">
+        <span class="icon-tg-title"></span>
+      </div>
+      <nav class="tg_head_main_wrap">
+        <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#recommendations">Рекомендации</a></li>
+          <li><a href="#examples">Примеры</a></li>
+          <li><a href="#contact">Контакты</a></li>
+        </ul>
+      </nav>
+    </header>
 
-    <div class="telegram-container">
-        <div class="header">
-            Telegram Chat
-        </div>
-        
-        <div class="message user">
-            <div class="sender">User</div>
-            <div class="text">Привет! Как дела?</div>
-        </div>
-        
-        <div class="message bot">
-            <div class="sender">Bot</div>
-            <div class="text">Привет! Всё отлично, спасибо за вопрос!</div>
+    <main class="im_history_col_wrap">
+      <section id="intro" class="im_message_outer_wrap">
+        <h1>Добро пожаловать!</h1>
+        <p>Этот сайт поможет вам понять, как писать первое сообщение так, чтобы оно не тратило ваше и мое время.</p>
+        <p>Следуйте рекомендациям ниже, чтобы ускорить процесс общения.</p>
+      </section>
+
+      <section id="recommendations" class="im_message_outer_wrap">
+        <h2>Как писать первое сообщение:</h2>
+        <ul>
+          <li>Кратко и по делу. Опишите суть вашего вопроса или запроса.</li>
+          <li>Убедитесь, что ваше сообщение содержит достаточно информации для понимания.</li>
+          <li>Не забудьте указать контекст или предысторию, если это необходимо.</li>
+        </ul>
+
+        <h2>Как не нужно писать первое сообщение:</h2>
+        <ul>
+          <li>Избегайте приветствий без дальнейшего содержания («Привет», «Здравствуйте» и т.д.).</li>
+          <li>Не оставляйте слишком расплывчатых или неконкретных вопросов («Мне нужно кое-что узнать»).</li>
+          <li>Не отправляйте пустые сообщения или ненужные формальности.</li>
+        </ul>
+      </section>
+
+      <section id="examples" class="im_message_outer_wrap">
+        <h2>Примеры первого сообщения:</h2>
+        <div class="im_message_selected">
+          <h3>Пример правильного сообщения:</h3>
+          <p>«Привет! У меня есть вопрос по поводу вашего предложения на сайте. Не могли бы вы уточнить, доступны ли скидки для новых клиентов?»</p>
         </div>
 
-        <div class="input-box">
-            <input type="text" placeholder="Напишите сообщение...">
-            <button>Отправить</button>
+        <div class="im_message_selected">
+          <h3>Пример неправильного сообщения:</h3>
+          <p>«Привет»</p>
         </div>
-    </div>
+      </section>
 
+      <section id="contact" class="im_message_outer_wrap">
+        <h2>Контакты</h2>
+        <p>Если у вас возникли вопросы, напишите нам на <a href="mailto:info@example.com">info@example.com</a>.</p>
+      </section>
+    </main>
+  </div>
 </body>
 </html>
